--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
+    "ethers": "^5.7.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
@@ -23,7 +24,8 @@
     "react-transition-group": "^4.4.5",
     "sass": "^1.59.3",
     "swiper": "^9.1.1",
-    "web-vitals": "^3.3.0"
+    "web-vitals": "^3.3.0",
+    "web3": "^4.5.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
