--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build --output public",
+    "build": "tsc && vite build && npm build",
     "preview": "vite preview"
   },
   "dependencies": {
