--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-pdf/renderer": "^3.3.8",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
