--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-tailwind/react": "^2.1.9",
     "@react-pdf/renderer": "^3.3.8",
     "@vercel/postgres": "^0.7.2",
     "axios": "^1.3.4",
@@ -20,6 +21,7 @@
     "react-bootstrap-accordion": "^1.0.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.0.1",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.0",
@@ -27,7 +29,8 @@
     "sass": "^1.59.3",
     "swiper": "^9.1.1",
     "web-vitals": "^3.3.0",
-    "web3": "^4.5.0"
+    "web3": "^4.5.0",
+    "web3modal": "^1.9.12"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
