--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "react-transition-group": "^4.4.5",
     "sass": "^1.59.3",
     "swiper": "^9.1.1",
+    "viem": "^2.7.13",
     "web-vitals": "^3.3.0",
     "web3": "^4.5.0",
     "web3modal": "^1.9.12"
