--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.9.0",
     "react-scripts": "^5.0.1",
     "react-tabs": "^6.0.0",
