--- a/package.json
+++ b/package.json
@@ -15,12 +15,14 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
+    "i18next": "^23.11.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-bootstrap": "^2.7.2",
     "react-bootstrap-accordion": "^1.0.0",
     "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
+    "react-i18next": "^14.1.0",
     "react-icons": "^5.0.1",
     "react-image-gallery": "^1.3.0",
     "react-router-dom": "^6.9.0",
