--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "axios": "^1.3.4",
     "bootstrap": "^5.2.3",
     "ethers": "^5.7.2",
+    "firebase": "^10.11.0",
     "i18next": "^23.11.2",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
